--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,11 @@
   .container {
     width: 90%;
     margin: 3rem auto;
-    border: 2px solid blue;
+    text-align: center;
+    font-size: 2rem;
+  }
+  h1{
+    padding-bottom: 1rem;
   }
   
   .row {
@@ -26,7 +30,6 @@
     border: 1px solid black;
     text-align: center;
     background-color: white;
-
     margin-bottom: 1rem;
     display: flex;
     justify-content: center;
